@@ -1,3 +1,3 @@
-SUBDIRS = src tests
+SUBDIRS = m4macros src tests
 
 bin_SCRIPTS=glimmer-config
