@@ -141,6 +141,6 @@ fi
 AC_SUBST(GLIMMER_CVS_VERS)
 AM_CONDITIONAL([HAVE_CVS],[test "$have_cvs_entries" == "yes"])
 
-AC_CONFIG_FILES([Makefile src/Makefile src/python/Makefile src/fortran/Makefile src/fortran/SLAP_library/Makefile \
+AC_CONFIG_FILES([Makefile m4macros/Makefile src/Makefile src/python/Makefile src/fortran/Makefile src/fortran/SLAP_library/Makefile \
 		tests/Makefile])
 AC_OUTPUT([glimmer-config src/fortran/glimmer_version.f90.in])
